skiplinks and contrast fixes

--- a/css/main.css
+++ b/css/main.css
@@ -71,4 +71,52 @@ form button {
 }
 
 /* help with contrast issues */
+nav ul{
+  display: flex;
+  list-style: none;
+  height: 50px;
+}
 
+nav li{
+  flex-grow: 1;
+  height: 100%;
+}
+
+nav li a{
+  display: block;
+  background-color: antiquewhite;
+  margin: 0 10px;
+  height: 100%;
+}
+
+nav li :hover{
+  background-color: azure;
+  color: antiquewhite;
+}
+
+nav li a:focus{
+  border: 2px solid black;
+  background-color: azure;
+}
+
+nav li a:active{
+  background-color: azure;
+
+}
+
+/* Skiplinks */
+
+.skiplink ul{
+  list-style: none;
+  position: relative;
+}
+.skiplinks a{
+  position: absolute;
+  top:-50em;
+  }
+  .skiplinks a:focus{
+    top:0;
+    background: azure;
+    display: block;
+    padding: 10px;
+}
